--- a/src/gnome-virt-manager.glade
+++ b/src/gnome-virt-manager.glade
@@ -297,6 +297,7 @@ Inactive virtual machines</property>
 	      <property name="fixed_height_mode">False</property>
 	      <property name="hover_selection">False</property>
 	      <property name="hover_expand">False</property>
+	      <signal name="row_activated" handler="on_vm_list_row_activated" last_modification_time="Mon, 03 Apr 2006 13:43:20 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -372,7 +373,7 @@ Inactive virtual machines</property>
 		      <child>
 			<widget class="GtkImage" id="image5">
 			  <property name="visible">True</property>
-			  <property name="stock">gtk-dialog-info</property>
+			  <property name="stock">gtk-properties</property>
 			  <property name="icon_size">4</property>
 			  <property name="xalign">0.5</property>
 			  <property name="yalign">0.5</property>
@@ -2344,6 +2345,23 @@ Inactive virtual machines</property>
 	      <property name="visible_vertical">True</property>
 	      <property name="is_important">False</property>
 	      <signal name="clicked" handler="on_control_snapshot_clicked" last_modification_time="Mon, 03 Apr 2006 09:53:54 GMT"/>
+	    </widget>
+	    <packing>
+	      <property name="expand">False</property>
+	      <property name="homogeneous">True</property>
+	    </packing>
+	  </child>
+
+	  <child>
+	    <widget class="GtkToolButton" id="control-details">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Machine details</property>
+	      <property name="use_underline">True</property>
+	      <property name="stock_id">gtk-properties</property>
+	      <property name="visible_horizontal">True</property>
+	      <property name="visible_vertical">True</property>
+	      <property name="is_important">False</property>
+	      <signal name="clicked" handler="on_control_details_clicked" last_modification_time="Mon, 03 Apr 2006 13:41:26 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="expand">False</property>
