Rename 'open console' to 'open terminal' in details window

--- a/src/gnome-virt-manager.glade
+++ b/src/gnome-virt-manager.glade
@@ -615,14 +615,14 @@ Inactive virtual machines</property>
 	  </child>
 
 	  <child>
-	    <widget class="GtkToolButton" id="control-console">
+	    <widget class="GtkToolButton" id="control-terminal">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Open console</property>
+	      <property name="label" translatable="yes">Open terminal</property>
 	      <property name="use_underline">True</property>
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
 	      <property name="is_important">False</property>
-	      <signal name="clicked" handler="on_control_console_clicked" last_modification_time="Mon, 03 Apr 2006 09:31:46 GMT"/>
+	      <signal name="clicked" handler="on_control_terminal_clicked" last_modification_time="Mon, 03 Apr 2006 15:36:51 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="expand">False</property>
