Fixed alignment of status label

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -876,7 +876,7 @@ Inactive virtual machines</property>
 					  <property name="yalign">0.5</property>
 					  <property name="xpad">0</property>
 					  <property name="ypad">0</property>
-					  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+					  <property name="ellipsize">PANGO_ELLIPSIZE_START</property>
 					  <property name="width_chars">-1</property>
 					  <property name="single_line_mode">False</property>
 					  <property name="angle">0</property>
