--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -740,7 +740,7 @@ Inactive virtual machines</property>
       </child>
 
       <child>
-	<widget class="GtkNotebook" id="notebook2">
+	<widget class="GtkNotebook" id="details-pages">
 	  <property name="border_width">3</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
