Add UI bits for saving vm snapshots. Actual "save" dialog and save code to follow.

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -711,14 +711,14 @@ Inactive virtual machines</property>
 	  </child>
 
 	  <child>
-	    <widget class="GtkToolButton" id="control-snapshot">
+	    <widget class="GtkToolButton" id="control-save-domain">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Take snapshot</property>
+	      <property name="label" translatable="yes">Save Domain</property>
 	      <property name="use_underline">True</property>
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
 	      <property name="is_important">False</property>
-	      <signal name="clicked" handler="on_control_snapshot_clicked" last_modification_time="Mon, 03 Apr 2006 09:31:41 GMT"/>
+	      <signal name="clicked" handler="on_control_save_clicked" last_modification_time="Thu, 13 Jul 2006 19:53:05 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="expand">False</property>
