--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -618,7 +618,11 @@ Inactive virtual machines</property>
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 </property>
   <property name="wrap_license">False</property>
-  <property name="authors">Daniel P. Berrange &lt;berrange@redhat.com&gt;</property>
+  <property name="authors">Daniel P. Berrange &lt;berrange@redhat.com&gt;
+Hugh O. Brock &lt;hbrock@redhat.com&gt;
+Máirín Duffy &lt;duffy@redhat.com&gt;
+</property>
+  <property name="artists">Máirín Duffy &lt;duffy@redhat.com&gt;	</property>
   <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">translator-credits</property>
   <signal name="delete_event" handler="on_vmm_about_delete_event" last_modification_time="Wed, 29 Mar 2006 10:31:19 GMT"/>
 </widget>
